WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292656
[GStreamer][WebRTC] Flaky assert in webrtc/audio-muted-stats.html
https://bugs.webkit.org/show_bug.cgi?id=292656
Summary
[GStreamer][WebRTC] Flaky assert in webrtc/audio-muted-stats.html
Philippe Normand
Reported
2025-05-07 02:14:13 PDT
Thread 1 (Thread 0x7f4331ffb6c0 (LWP 136080)): #0 0x00007f454ff95db5 in WTFCrash () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #1 0x00007f45556a60cc in WTF::RefCountedBase::derefBase() const () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #2 0x00007f4557c01cac in WebCore::GStreamerStatsCollector::invalidateCache() () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #3 0x00007f4557be6167 in WebCore::GStreamerMediaEndpoint::onIceCandidate(unsigned int, char*) () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #4 0x00007f4548a3b056 in ffi_call_unix64 () at ../src/x86/unix64.S:104 #5 0x00007f4548a36d08 in ffi_call_int (cif=cif@entry=0x7f4331ffa190, fn=fn@entry=0x7f4557bedd40 <WebCore::GStreamerMediaEndpoint::initializePipeline()::$_6::__invoke(WebCore::GStreamerMediaEndpoint*, unsigned int, char*)>, rvalue=<optimized out>, rvalue@entry=0x7f4331ffa0f0, avalue=avalue@entry=0x7f4331ffa090, closure=closure@entry=0x0) at ../src/x86/ffi64.c:673 #6 0x00007f4548a3970e in ffi_call (cif=cif@entry=0x7f4331ffa190, fn=fn@entry=0x7f4557bedd40 <WebCore::GStreamerMediaEndpoint::initializePipeline()::$_6::__invoke(WebCore::GStreamerMediaEndpoint*, unsigned int, char*)>, rvalue=rvalue@entry=0x7f4331ffa0f0, avalue=avalue@entry=0x7f4331ffa090) at ../src/x86/ffi64.c:710 #11 0x00007f45502a6e13 in <emit signal '???' on instance ???> (instance=instance@entry=0x7f434807bad0, signal_id=<optimized out>, detail=detail@entry=0) at ../gobject/gsignal.c:3597 #7 0x00007f455028d97c in g_cclosure_marshal_generic_va (closure=<optimized out>, return_value=<optimized out>, instance=<optimized out>, args_list=<optimized out>, marshal_data=<optimized out>, n_params=<optimized out>, param_types=<optimized out>) at ../gobject/gclosure.c:1651 #8 0x00007f45502a6c43 in _g_closure_invoke_va (closure=0x28f607d0, return_value=0x0, instance=0x7f434807bad0, args=0x7f4331ffa450, n_params=2, param_types=0x28f18170) at ../gobject/gclosure.c:896 #9 signal_emit_valist_unlocked (instance=instance@entry=0x7f434807bad0, signal_id=signal_id@entry=68, detail=detail@entry=0, var_args=var_args@entry=0x7f4331ffa450) at ../gobject/gsignal.c:3438 #10 0x00007f45502a6d58 in g_signal_emit_valist (instance=0x7f434807bad0, signal_id=68, detail=0, var_args=var_args@entry=0x7f4331ffa450) at ../gobject/gsignal.c:3277 #12 0x00007f453400ce13 in _on_local_ice_candidate_task (webrtc=0x7f434807bad0) at ../gstreamer/subprojects/gst-plugins-bad/ext/webrtc/gstwebrtcbin.c:7226 #13 0x00007f453400932a in _execute_op (op=op@entry=0x7f41c4057340) at ../gstreamer/subprojects/gst-plugins-bad/ext/webrtc/gstwebrtcbin.c:1212 #14 0x00007f454ab3e76d in g_idle_dispatch (source=0x7f41c40548d0, callback=0x7f45340092f0 <_execute_op>, user_data=0x7f41c4057340) at ../glib/gmain.c:6284 #15 0x00007f454ab38040 in g_main_dispatch (context=0x7f41c40008e0) at ../glib/gmain.c:3398 #16 g_main_context_dispatch_unlocked (context=0x7f41c40008e0) at ../glib/gmain.c:4249 #17 0x00007f454ab41128 in g_main_context_iterate_unlocked (context=0x7f41c40008e0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4314 #18 0x00007f454ab413cf in g_main_loop_run (loop=0x7f41c4000d40) at ../glib/gmain.c:4516 #19 0x00007f453400c269 in _gst_pc_thread (webrtc=0x7f434807bad0) at ../gstreamer/subprojects/gst-plugins-bad/ext/webrtc/gstwebrtcbin.c:1137 #20 0x00007f454ab6e8e2 in g_thread_proxy (data=0x2901b260) at ../glib/gthread.c:893 #21 0x00007f454a4f1f14 in start_thread (arg=<optimized out>) at pthread_create.c:448 #22 0x00007f454a574aac in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-05-07 02:57:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45053
EWS
Comment 2
2025-05-08 02:38:51 PDT
Committed
294660@main
(c91567ff0ca7): <
https://commits.webkit.org/294660@main
> Reviewed commits have been landed. Closing PR #45053 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-05-08 02:39:14 PDT
<
rdar://problem/150920665
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug