[GStreamer][WebRTC] Flaky assert in webrtc/audio-muted-stats.html https://bugs.webkit.org/show_bug.cgi?id=292656

Reviewed by Xabier Rodriguez-Calvar.

Make sure GStreamerStatsCollector::invalidateCache() is always called from the main thread because
the RTCStatsReport RefPtrs are not threadsafe. GStreamerMediaEndpoint::onIceCandidate() is
initially called from the webrtcbin pc thread.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::onIceCandidate):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.cpp:
(WebCore::GStreamerStatsCollector::invalidateCache):

Canonical link: https://commits.webkit.org/294660@main